<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:checkableBehavior="single"
        android:title="@string/menu_map_layers">
        <menu>

            <item
                android:id="@+id/map_types"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/map_tiles_types_title" />

            <item
                android:id="@+id/traffic_layer"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/submenu_traffic_layer" />

        </menu>
    </item>

    <item
        android:checkableBehavior="single"
        android:title="@string/menu_map_manipulation">
        <menu>

            <item
                android:id="@+id/mapcentering"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_map_centering" />

            <item
                android:id="@+id/mapmode"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/map_mode" />

            <item
                android:id="@+id/map_events"
                android:checkableBehavior="single"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_events" />

            <item
                android:id="@+id/map_compass_and_current_location"
                android:checkableBehavior="single"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/map_compass_and_current_location" />
        </menu>
    </item>

    <item
        android:checkableBehavior="single"
        android:title="@string/menu_markers_options">
        <menu>

            <item
                android:id="@+id/markers_custom"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_markers_custom" />
            <item
                android:id="@+id/markers_balloons"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_markers_balloons" />
            <item
                android:id="@+id/custom_shapes"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_custom_shapes" />

        </menu>
    </item>

    <item android:title="@string/menu_route_planner">
        <menu>
            <item
                android:id="@+id/route_travel_modes"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/travel_mode" />

            <item
                android:id="@+id/route_types"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/route_types" />

            <item
                android:id="@+id/route_avoids"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/route_avoids_title" />

            <item
                android:id="@+id/route_waypoints"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/route_waypoints" />

            <item
                android:id="@+id/departure_and_arrival_time"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/route_departure_and_arrival_time_title" />

            <item
                android:id="@+id/route_alternatives"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/route_alternatives" />

            <item
                android:id="@+id/maneuvers_list"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/maneuvers_list_title" />
        </menu>
    </item>

    <item
        android:checkableBehavior="single"
        android:title="@string/search">
        <menu>

            <item
                android:id="@+id/address_search"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/address_search" />
            <item
                android:id="@+id/category_search"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/category_search" />

            <item
                android:id="@+id/language_selector_search"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/language_selector_search" />

            <item
                android:id="@+id/typeahead_search"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/type_ahead_search" />

            <item
                android:id="@+id/fuzzy_search"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/fuzzy_search" />

            <item
                android:id="@+id/reverse_geocoding"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/reverse_geocoding" />

        </menu>
    </item>
    <item
        android:checkableBehavior="single"
        android:title="@string/other">
        <menu>
            <item
                android:id="@+id/license"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about_menu" />
        </menu>
    </item>
</menu>

