<?xml version="1.0" encoding="utf-8"?>
<!--

    Copyright (c) 2015-2017 TomTom N.V. All rights reserved.

    This software is the proprietary copyright of TomTom N.V. and its subsidiaries and may be used
    for internal evaluation purposes or commercial use strictly subject to separate licensee
    agreement between you and TomTom. If you are the licensee, you are only permitted to use
    this Software in accordance with the terms of your license agreement. If you are not the
    licensee then you are not authorised to use this software in any manner and should
    immediately return it to TomTom N.V.

-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?attr/actionBarSize">

    <LinearLayout
        android:id="@+id/search_box_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/fab_margin"
        android:paddingRight="@dimen/fab_margin">

        <EditText
            android:id="@+id/search_box_origin"
            style="@style/SearchBoxExitText"
            android:layout_marginTop="@dimen/offset_default"
            android:drawableLeft="@drawable/ic_inputmarker_start"
            android:hint="@string/hint_origin" />


        <EditText
            android:id="@+id/search_box_destination"
            style="@style/SearchBoxExitText"
            android:layout_marginTop="@dimen/offset_small"
            android:drawableLeft="@drawable/ic_inputmarker_destination"
            android:hint="@string/hint_destination" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/offset_small"
            android:layout_marginTop="@dimen/offset_small"
            >

            <Button
                android:id="@+id/add_waypoint_button"
                style="@style/ControlButton"
                android:layout_gravity="left"
                android:text="@string/add_waypoint_btn_text"
                android:visibility="gone" />

            <Button
                android:id="@+id/search_go_button"
                style="@style/ControlButton"
                android:layout_gravity="center_horizontal"
                android:text="@string/search_btn_text" />
        </FrameLayout>
    </LinearLayout>
</FrameLayout>